Crash of Blender when I try to join an object with one that has booleans modifiers. #51184

Closed
opened 2017-04-12 10:34:15 +02:00 by Paolo Furani · 4 comments

System Information
Lubuntu 16.04 Intel HD 5500

Blender Version
Broken: (Blender 2.78 (sub 4), 5b873c8c24 - Blender 2.78 (sub 0), Hash e92f235283)

Short description of error
When trying to join an object with one that has modifiers, Blender goes into crash and closes immediately.
Exact steps for others to reproduce the error
In the file attached below is a part of a project I'm doing, and I found it crash when I try to connect the object "Circle.022"with the object "fori.001" which has some modifiers that interact with the object "Base.001"

Blender_Crash_on_obj_join.blend

# Blender 2.78 (sub 4), Commit date: 2017-04-09 06:26, Hash 5b873c8c24
bpy.ops.object.delete(use_global=False)  # Operator
bpy.context.space_data.recent_folders_active = 0  # Property
bpy.context.space_data.clip_end = 1000  # Property
bpy.context.space_data.context = 'RENDER_LAYER'  # Property
bpy.context.space_data.context = 'SCENE'  # Property
bpy.ops.script.python_file_run(filepath="/home/pafurijaz/Software/blender-daily_build/2.78/scripts/presets/units_length/millimeters.py")  # Operator
bpy.context.space_data.clip_end = 10000  # Property
bpy.context.space_data.recent_folders_active = 4  # Property
bpy.ops.object.join()  # Operator

# backtrace
/home/pafurijaz/Software/blender-daily_build/blender(BLI_system_backtrace+0x1d) [0x1a45c5d]
/home/pafurijaz/Software/blender-daily_build/blender() [0x1060559]
/lib/x86_64-linux-gnu/libc.so.6(+0x354b0) [0x7fbe931a64b0]
/home/pafurijaz/Software/blender-daily_build/blender(bmesh_disk_edge_append+0) [0x162f000]
/home/pafurijaz/Software/blender-daily_build/blender(BM_edge_create+0xda) [0x160b81a]
/home/pafurijaz/Software/blender-daily_build/blender(DM_to_bmesh_ex+0x45a) [0x17f19ca]
/home/pafurijaz/Software/blender-daily_build/blender() [0x156a3b4]
/home/pafurijaz/Software/blender-daily_build/blender() [0x172092a]
/home/pafurijaz/Software/blender-daily_build/blender() [0x172161c]
/home/pafurijaz/Software/blender-daily_build/blender(makeDerivedMesh+0x70) [0x1721720]
/home/pafurijaz/Software/blender-daily_build/blender(BKE_object_handle_data_update+0x490) [0x1810380]
/home/pafurijaz/Software/blender-daily_build/blender(BKE_object_handle_update_ex+0x1e0) [0x180ac20]
/home/pafurijaz/Software/blender-daily_build/blender() [0x184c6fc]
/home/pafurijaz/Software/blender-daily_build/blender(BKE_scene_update_tagged+0xb4) [0x184c884]
/home/pafurijaz/Software/blender-daily_build/blender(wm_event_do_notifiers+0x4b9) [0x1067129]
/home/pafurijaz/Software/blender-daily_build/blender(WM_main+0x20) [0x1061130]
/home/pafurijaz/Software/blender-daily_build/blender(main+0x3f0) [0x1000030]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0) [0x7fbe93191830]
/home/pafurijaz/Software/blender-daily_build/blender() [0x105d488]
**System Information** Lubuntu 16.04 Intel HD 5500 **Blender Version** Broken: (Blender 2.78 (sub 4), 5b873c8c24 - Blender 2.78 (sub 0), Hash e92f2352830) **Short description of error** When trying to join an object with one that has modifiers, Blender goes into crash and closes immediately. **Exact steps for others to reproduce the error** In the file attached below is a part of a project I'm doing, and I found it crash when I try to connect the object "**Circle.022**"with the object "**fori.001**" which has some modifiers that interact with the object "**Base.001**" [Blender_Crash_on_obj_join.blend](https://archive.blender.org/developer/F543247/Blender_Crash_on_obj_join.blend) ``` # Blender 2.78 (sub 4), Commit date: 2017-04-09 06:26, Hash 5b873c8c24 bpy.ops.object.delete(use_global=False) # Operator bpy.context.space_data.recent_folders_active = 0 # Property bpy.context.space_data.clip_end = 1000 # Property bpy.context.space_data.context = 'RENDER_LAYER' # Property bpy.context.space_data.context = 'SCENE' # Property bpy.ops.script.python_file_run(filepath="/home/pafurijaz/Software/blender-daily_build/2.78/scripts/presets/units_length/millimeters.py") # Operator bpy.context.space_data.clip_end = 10000 # Property bpy.context.space_data.recent_folders_active = 4 # Property bpy.ops.object.join() # Operator # backtrace /home/pafurijaz/Software/blender-daily_build/blender(BLI_system_backtrace+0x1d) [0x1a45c5d] /home/pafurijaz/Software/blender-daily_build/blender() [0x1060559] /lib/x86_64-linux-gnu/libc.so.6(+0x354b0) [0x7fbe931a64b0] /home/pafurijaz/Software/blender-daily_build/blender(bmesh_disk_edge_append+0) [0x162f000] /home/pafurijaz/Software/blender-daily_build/blender(BM_edge_create+0xda) [0x160b81a] /home/pafurijaz/Software/blender-daily_build/blender(DM_to_bmesh_ex+0x45a) [0x17f19ca] /home/pafurijaz/Software/blender-daily_build/blender() [0x156a3b4] /home/pafurijaz/Software/blender-daily_build/blender() [0x172092a] /home/pafurijaz/Software/blender-daily_build/blender() [0x172161c] /home/pafurijaz/Software/blender-daily_build/blender(makeDerivedMesh+0x70) [0x1721720] /home/pafurijaz/Software/blender-daily_build/blender(BKE_object_handle_data_update+0x490) [0x1810380] /home/pafurijaz/Software/blender-daily_build/blender(BKE_object_handle_update_ex+0x1e0) [0x180ac20] /home/pafurijaz/Software/blender-daily_build/blender() [0x184c6fc] /home/pafurijaz/Software/blender-daily_build/blender(BKE_scene_update_tagged+0xb4) [0x184c884] /home/pafurijaz/Software/blender-daily_build/blender(wm_event_do_notifiers+0x4b9) [0x1067129] /home/pafurijaz/Software/blender-daily_build/blender(WM_main+0x20) [0x1061130] /home/pafurijaz/Software/blender-daily_build/blender(main+0x3f0) [0x1000030] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0) [0x7fbe93191830] /home/pafurijaz/Software/blender-daily_build/blender() [0x105d488] ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @pafurijaz-4

Added subscriber: @pafurijaz-4

This issue was referenced by 6b815ae55d

This issue was referenced by 6b815ae55db81dc4d377636f14cb491cb7dde252

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51184
No description provided.