Fix T51184: Crash of Blender when I try to join an object with one that has booleans modifiers