source/blender/editors/mesh/meshtools.c
@@ -57,6 +57,7 @@
 #include "BKE_main.h"
 #include "BKE_mesh.h"
 #include "BKE_material.h"
+#include "BKE_object.h"
 #include "BKE_report.h"
 #include "BKE_editmesh.h"
 #include "BKE_multires.h"
@@ -595,6 +596,9 @@ int join_mesh_exec(bContext *C, wmOperator *op)
 	if (key && (key->type != KEY_RELATIVE)) {
 		BKE_key_sort(key);
 	}
+
+	/* Due to dependnecy cycle some other object might access old derived data. */
+	BKE_object_free_derived_caches(ob);
 
 	DAG_relations_tag_update(bmain);   /* removed objects, need to rebuild dag */
 
